--- a/css22/index.html
+++ b/css22/index.html
@@ -21,7 +21,7 @@
   <body>
     <header class="main-header">
       <div>
-        <a href="index.html"> uHost </a>
+        <a href="index.html"> Host </a>
       </div>
       <nav class="main-nav">
         <ul class="main-nav__items">
